logs/loggrok.log
Listing '.'...
Listing './bin'...
Compiling './bin/xix-coverage.py'...
***   File "./bin/xix-coverage.py", line 74
    print 'Generated coverage annotations'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/loggrok'...
Compiling './lib/python3.5/site-packages/loggrok/log.py'...
***   File "./lib/python3.5/site-packages/loggrok/log.py", line 38
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/loggrok/parse.py'...
***   File "./lib/python3.5/site-packages/loggrok/parse.py", line 50
    raise LogParseException, 'Failed parsing message: %s' % data
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/loggrok-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xix'...
Listing './lib/python3.5/site-packages/xix/data'...
Compiling './lib/python3.5/site-packages/xix/data/coverage.py'...
***   File "./lib/python3.5/site-packages/xix/data/coverage.py", line 260
    raise self.error, "Only one coverage object allowed."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xix/utils'...
Compiling './lib/python3.5/site-packages/xix/utils/binder.py'...
***   File "./lib/python3.5/site-packages/xix/utils/binder.py", line 96
    except IndexError, ie:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xix/utils/comp'...
Compiling './lib/python3.5/site-packages/xix/utils/concur.py'...
***   File "./lib/python3.5/site-packages/xix/utils/concur.py", line 18
    class DynamicLock
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/config.py'...
***   File "./lib/python3.5/site-packages/xix/utils/config.py", line 229
    raise ConfigLoaderException, BADLINE % line
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/console.py'...
***   File "./lib/python3.5/site-packages/xix/utils/console.py", line 128
    raise ValueError, 'Format named %s already registered' % name
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/cover.py'...
***   File "./lib/python3.5/site-packages/xix/utils/cover.py", line 117
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/decor.py'...
***   File "./lib/python3.5/site-packages/xix/utils/decor.py", line 97
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/diff.py'...
***   File "./lib/python3.5/site-packages/xix/utils/diff.py", line 53
    raise NotImplementedError, 'diff has not been implemented yet'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/namespace.py'...
***   File "./lib/python3.5/site-packages/xix/utils/namespace.py", line 46
    raise NamespaceInvalidationException, 'invalid name for %s: %s' % (self.__class__, name)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/python.py'...
***   File "./lib/python3.5/site-packages/xix/utils/python.py", line 170
    raise NotImplementedError, 'buildPackagePath is not implemented'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/rest.py'...
***   File "./lib/python3.5/site-packages/xix/utils/rest.py", line 34
    raise NotRestfulException,
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/rules.py'...
***   File "./lib/python3.5/site-packages/xix/utils/rules.py", line 79
    raise RulesEngineAlreadyRegisteredException, \
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/timetool.py'...
***   File "./lib/python3.5/site-packages/xix/utils/timetool.py", line 138
    raise ValueError, '%d does not fall in range for datetime %s' % \
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xix/utils/tools'...
Compiling './lib/python3.5/site-packages/xix/utils/tools/options.py'...
***   File "./lib/python3.5/site-packages/xix/utils/tools/options.py", line 106
    raise OptionException, errmsg % option.dest
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/tools/parse.py'...
***   File "./lib/python3.5/site-packages/xix/utils/tools/parse.py", line 74
    raise OptionParserException, errmsg
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/xio.py'...
***   File "./lib/python3.5/site-packages/xix/utils/xio.py", line 77
    raise IOError, '[Error 22] Invalid argument'
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xix/utils/xstring.py'...
***   File "./lib/python3.5/site-packages/xix/utils/xstring.py", line 58
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xix/utils/xtwisted'...
Compiling './lib/python3.5/site-packages/xix/utils/xtwisted/sshcmds.py'...
***   File "./lib/python3.5/site-packages/xix/utils/xtwisted/sshcmds.py", line 17
    print 'host key fingerprint: %s' % fingerprint
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xix_utils-0.2.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
